@@ -1,11 +1,17 @@
 package com.bwdesigngroup.neo4j;
 
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
-import com.bwdesigngroup.neo4j.records.Neo4JSettingsRecord;
-import com.bwdesigngroup.neo4j.web.Neo4JSettingsPage;
+import com.bwdesigngroup.neo4j.instances.Extendable;
+import com.bwdesigngroup.neo4j.records.BaseRecord;
+import com.bwdesigngroup.neo4j.records.RemoteDatabaseRecord;
+
 import com.inductiveautomation.ignition.common.BundleUtil;
 import com.inductiveautomation.ignition.common.licensing.LicenseState;
 import com.inductiveautomation.ignition.common.script.ScriptManager;
@@ -13,54 +19,56 @@ import com.inductiveautomation.ignition.common.script.hints.PropertiesFileDocPro
 import com.inductiveautomation.ignition.gateway.clientcomm.ClientReqSession;
 import com.inductiveautomation.ignition.gateway.localdb.persistence.IRecordListener;
 import com.inductiveautomation.ignition.gateway.model.AbstractGatewayModuleHook;
+import com.inductiveautomation.ignition.gateway.model.ExtensionPointManager;
+import com.inductiveautomation.ignition.gateway.model.ExtensionPointType;
 import com.inductiveautomation.ignition.gateway.model.GatewayContext;
 import com.inductiveautomation.ignition.gateway.web.models.ConfigCategory;
-import com.inductiveautomation.ignition.gateway.web.models.DefaultConfigTab;
 import com.inductiveautomation.ignition.gateway.web.models.IConfigTab;
 import com.inductiveautomation.ignition.gateway.web.models.KeyValue;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class GatewayHook extends AbstractGatewayModuleHook {
+import simpleorm.dataset.SQuery;
+
+import static com.bwdesigngroup.neo4j.web.Neo4JExtensionPage.CONFIG_CATEGORY;
+import static com.bwdesigngroup.neo4j.web.Neo4JExtensionPage.CONFIG_ENTRY;
+
+public class GatewayHook extends AbstractGatewayModuleHook implements ExtensionPointManager  {
     private GatewayContext context;
+    public static GatewayHook INSTANCE = null;
 
     private final Logger logger = LoggerFactory.getLogger(getClass());
 
     private GatewayScriptModule scriptModule;
 
+    private final Map<String, AbstractExtensionType> extensionPoints = Map.of(
+        "remote", new RemoteDatabaseRecord.RemoteDatabaseType()
+    );
     
+    private final Set<Extendable> instances = new HashSet<>();
     // 
     //  This sets up the config panel
     //  
-    public static final ConfigCategory CONFIG_CATEGORY =
-        new ConfigCategory("Neo4J", "Neo4J.nav.header", 700);
-
+    
     @Override
     public List<ConfigCategory> getConfigCategories() {
-        return Collections.singletonList(CONFIG_CATEGORY);
+        return List.of(CONFIG_CATEGORY);
     }
-
-
-    //
-    //  An IConfigTab contains all the info necessary to create a link to your config page on the gateway nav menu.
-    //  In order to make sure the breadcrumb and navigation works properly, the 'name' field should line up
-    //  with the right-hand value returned from {@link ConfigPanel#getMenuLocation}. In this case name("homeconnect")
-    //  lines up with HCSettingsPage#getMenuLocation().getRight()
-    //  
-    public static final IConfigTab NEO4J_CONFIG_ENTRY = DefaultConfigTab.builder()
-            .category(CONFIG_CATEGORY)
-            .name("neo4j")
-            .i18n("Neo4J.nav.settings.title")
-            .page(Neo4JSettingsPage.class)
-            .terms("Neo4J settings")
-            .build();
 
     @Override
     public List<? extends IConfigTab> getConfigPanels() {
-        return Collections.singletonList(
-            NEO4J_CONFIG_ENTRY
-        );
+        return List.of(CONFIG_ENTRY);
+    }
+
+    @Override
+    public ExtensionPointType getExtensionPoint(String s) {
+        return extensionPoints.get(s);
+    }
+
+    @Override
+    public List<? extends ExtensionPointType> getExtensionPoints() {
+        return new ArrayList<>(extensionPoints.values());
     }
 
 
@@ -68,6 +76,7 @@ public class GatewayHook extends AbstractGatewayModuleHook {
     @Override
     public void setup(GatewayContext gatewayContext) {
         this.context = gatewayContext;
+        INSTANCE = this;
         scriptModule = new GatewayScriptModule(this.context);
 
         logger.debug("Beginning setup of Neo4J Module");
@@ -78,18 +87,15 @@ public class GatewayHook extends AbstractGatewayModuleHook {
         //Verify tables for persistent records if necessary
         verifySchema(context);
 
-        // create records if needed
-        maybeCreateNeo4JSettings(context);
-
         // listen for updates to the settings record...
-        Neo4JSettingsRecord.META.addRecordListener(new IRecordListener<Neo4JSettingsRecord>() {
+        BaseRecord.META.addRecordListener(new IRecordListener<BaseRecord>() {
             @Override
-            public void recordUpdated(Neo4JSettingsRecord neo4jSettingsRecord) {
+            public void recordUpdated(BaseRecord SettingsRecord) {
                 logger.info("recordUpdated()");
             }
 
             @Override
-            public void recordAdded(Neo4JSettingsRecord neo4jSettingsRecord) {
+            public void recordAdded(BaseRecord jSettingsRecord) {
                 logger.info("recordAdded()");
             }
 
@@ -105,36 +111,20 @@ public class GatewayHook extends AbstractGatewayModuleHook {
 
     private void verifySchema(GatewayContext context) {
         try {
-            context.getSchemaUpdater().updatePersistentRecords(Neo4JSettingsRecord.META);
+            context.getSchemaUpdater().updatePersistentRecords(BaseRecord.META, RemoteDatabaseRecord.META);
         } catch (SQLException e) {
             logger.error("Error verifying persistent record schemas for Neo4J records.", e);
         }
     }
 
-    public void maybeCreateNeo4JSettings(GatewayContext context) {
-        logger.trace("Attempting to create Neo4J Settings Record");
-        try {
-            Neo4JSettingsRecord settingsRecord = context.getLocalPersistenceInterface().createNew(Neo4JSettingsRecord.META);
-            settingsRecord.setId(0L); 
-            settingsRecord.setNeo4JDatabasePath("bolt://localhost:7687");
-            settingsRecord.setNeo4JUsername("neo4j");
-            settingsRecord.setNeo4JPassword("password");
-
-        /*
-			 * This doesn't override existing settings, only replaces it with these if we didn't
-			 * exist already.
-			 */
-            context.getSchemaUpdater().ensureRecordExists(settingsRecord);
-        } catch (Exception e) {
-            logger.error("Failed to establish Neo4JSettings Record exists", e);
-        }
-
-        logger.trace("Neo4J Settings Record Established");
-    }
-
     @Override
     public void startup(LicenseState licenseState) {
         logger.info("startup()");
+        List<BaseRecord> baseRecords = context.getPersistenceInterface().query(new SQuery<>(BaseRecord.META));
+        for (BaseRecord record : baseRecords) {
+            Extendable instance = extensionPoints.get(record.getType()).createNewInstance(context, record);
+            instances.add(instance);
+        }
     }
 
     @Override
@@ -155,5 +145,10 @@ public class GatewayHook extends AbstractGatewayModuleHook {
     @Override
     public Object getRPCHandler(ClientReqSession session, String projectName) {
         return scriptModule;
+    }
+
+    @Override
+    public boolean isFreeModule() {
+        return true;
     }
 }
